# emulator

./: .gitignore  CMakeLists.txt  README.md  compilar.txt  consoles.txt  git.md  imgui.ini
include/: Atari2600.h  Console.h  EmulatorApp.h  GameBoy.h  GameBoyAdvance.h  GameBoyColor.h  NES.h  Nintendo2DS.h  Nintendo3DS.h  Nintendo64.h  NintendoDS.h  NintendoSwitch.h  NintendoWii.h  SNES.h  SegaGenesis.h
src/: Atari2600.cpp  EmulatorApp.cpp  GameBoy.cpp  GameBoyAdvance.cpp  GameBoyColor.cpp  NES.cpp  Nintendo2DS.cpp  Nintendo3DS.cpp  Nintendo64.cpp  NintendoDS.cpp  NintendoSwitch.cpp  NintendoWii.cpp  SNES.cpp  SegaGenesis.cpp  main.cpp
